Added header and foot structure and jQuery

--- a/index.html
+++ b/index.html
@@ -9,19 +9,29 @@
     <meta name="description" content="LCB Product algorithm">
     <meta name="author" content="LCB">
     <link href="css/styles.css" rel="stylesheet">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
  <body>
-     <nav class="navbar navbar-default navbar-fixed-top">
-         <div class="navbar-header">
-            <a class="navbar-brand" href="#">
-                <span class="glyphicon glyphicon-heart" aria-hidden="true"></span> LCB
-            </a>
-        </div>
-     </nav>
+     <header>
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">
+                        <span class="glyphicon glyphicon-heart" aria-hidden="true"></span> LCB
+                    </a>
+                </div>
+            </nav>
+        </nav>
+     </header>
 
-     <nav class="navbar navbar-default navbar-fixed-bottom">
-         <div class="text-center">(C) LCB 2016</div>
-     </nav>
+    <footer>
+         <nav class="navbar navbar-default navbar-fixed-bottom">
+            <div class="container">
+                <div class="text-center">(C) LCB 2016</div>
+            </div>
+         </nav>
+    </footer>
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <link href="css/bootstrap.min.css" rel="stylesheet">
  </body>
 </html>
