--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
  <body>
      <header>
-        <nav class="navbar navbar-default navbar-fixed-top">
+        <nav class="navbar navbar-default navbar-static-top">
             <div class="container">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">
@@ -22,6 +22,14 @@
             </nav>
         </nav>
      </header>
+     <div class="container">
+        <form class="form-horizontal">
+                <div class="form-group">
+                    <button type="button" class="btn btn-primary btn-block btn-lg">View Products</button>
+                    <button type="button" class="btn btn-primary btn-block btn-lg">Add Product</button>
+                </div>
+        </form>
+     </div>
 
     <footer>
          <nav class="navbar navbar-default navbar-fixed-bottom">
