--- a/viewProduct.html
+++ b/viewProduct.html
@@ -32,7 +32,7 @@
                 <label for="description">Description</label>
                 <input type="text" class="form-control" id="description" placeHolder="Loading..." readonly>
             </div>
-            <div class="container">
+            <div class="row">
                 <div class="col-md-6">
                         <label for="price">Price</label>
                         <input type="number" class="form-control" id="price" placeHolder="Loading..." readonly>
@@ -45,7 +45,7 @@
                 </div>
             </div>
             <div class="form-group"></div>
-            <div class="contianer">
+            <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
                             <label for="category">Category</label>
@@ -63,7 +63,8 @@
             </div>
          </nav>
     </footer>
-        <script src="js/bootstrap.min.js"></script>
+        <script src="js/bootstrap.min.js" type="javascript"></script>
         <link href="css/bootstrap.min.css" rel="stylesheet">
+        <script src="js/product.js" type="javascript"></script>
  </body>
 </html>
