--- a/viewProduct.html
+++ b/viewProduct.html
@@ -22,7 +22,7 @@
         </nav>
      </header>
     <div class="container">
-        <h2>Add Product</h2>
+        <h2>ViewProduct</h2>
         <form>
             <div class="form-group">
                 <label for="title">Title</label>
