--- a/addProduct.html
+++ b/addProduct.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Add a product to LCB">
     <meta name="author" content="LCB">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script src="js/product.js"></script>
 </head>
 <body>
     <header>
@@ -32,14 +33,27 @@
                 <label for="description">Description</label>
                 <input type="text" class="form-control" id="description" placeholder="Description">
             </div>
-            <div class="container">
-                <div class="col-md-6">
-                        <label for="price">Price</label>
+            <div class="row">
+                <div class="col-md-4">Price</div>
+                <div class="col-md-4">Weight</div>
+                <div class="col-md-4">Price per cup £</div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
                         <input type="number" class="form-control" id="price" placeholder="0.00">
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <div class="form-group">
-                        <label for="ppc">Price per cup </label>
+                        <div class="btn-group" role="group" >
+                                <button type="button" class="btn btn-default">227g</button>
+                                <button type="button" class="btn btn-default">500g</button>
+                                <button type="button" class="btn btn-default">1kg</button>
+                                <button type="button" class="btn btn-default">6x1kg</button>
+                        </div>
+                    </div>
+                </div>
+                 <div class="col-md-4">
+                    <div class="form-group">
                         <label for="pricePerCup"></label>
                     </div>
                 </div>
