Updated UI and removed bootlint issues with coloums inside the div tags

--- a/addProduct.html
+++ b/addProduct.html
@@ -36,7 +36,7 @@
             <div class="row">
                 <div class="col-md-4">Price</div>
                 <div class="col-md-4">Weight</div>
-                <div class="col-md-4">Price per cup £</div>
+                <div class="col-md-4"></div>
             </div>
             <div class="row">
                 <div class="col-md-4">
@@ -54,13 +54,6 @@
                 </div>
                  <div class="col-md-4">
                     <div class="form-group">
-                        <label for="pricePerCup"></label>
-                    </div>
-                </div>
-            </div>
-            <div class="form-group"></div>
-            <div class="contianer">
-                    <div class="col-md-6">
                         <div class="btn-group">
                             <button type="button" class="btn btn-primary btn-mg">Catergory</button>
                             <button type="button" class="btn btn-primary dropdown-toggle btn-mg" data-toggle="dropdown" 
@@ -75,8 +68,12 @@
                             </ul>
                         </div>
                     </div>
-                <div class="col-md-6"><a href="#" class="btn btn-success pull-right btn-lg">Submit</a></div>
-              </div>
+            </div>
+        </div>
+        <div class="spacer">SASS/LESS WILL BE USED TO CREATE THE SPACE</div>
+        <div class="rows">
+                <a href="#" class="btn btn-success btn-block">Submit</a>
+            </div>
         </form>
     </div>
     <footer>
