Corrected 12 column issue that bootlinter was reporting

--- a/addProduct.html
+++ b/addProduct.html
@@ -70,8 +70,11 @@
                     </div>
             </div>
         </div>
-        <div class="spacer">SASS/LESS WILL BE USED TO CREATE THE SPACE</div>
-        <div class="rows">
+            <div class="row ">
+                <div class="col-md-12">£<label id="ppc" class="ppc" /></div>
+            </div>
+            <div class="spacer">SASS/LESS WILL BE USED TO CREATE THE SPACE</div>
+            <div class="rows">
                 <a href="#" class="btn btn-success btn-block">Submit</a>
             </div>
         </form>
