Added price per cup calculation to the add product which is activated when the price field has been filled out and a weight button has been selected

--- a/addProduct.html
+++ b/addProduct.html
@@ -45,10 +45,10 @@
                 <div class="col-md-4">
                     <div class="form-group">
                         <div class="btn-group" role="group" >
-                                <button type="button" class="btn btn-default">227g</button>
-                                <button type="button" class="btn btn-default">500g</button>
-                                <button type="button" class="btn btn-default">1kg</button>
-                                <button type="button" class="btn btn-default">6x1kg</button>
+                                <button type="button" id="btn227" class="btn btn-default" value="227">227g</button>
+                                <button type="button" id="btn500" class="btn btn-default" value="500">500g</button>
+                                <button type="button" id="btn1000" class="btn btn-default" value="1000">1kg</button>
+                                <button type="button" id="btn6000" class="btn btn-default" value="6000">6x1kg</button>
                         </div>
                     </div>
                 </div>
@@ -71,7 +71,7 @@
             </div>
         </div>
             <div class="row ">
-                <div class="col-md-12">£<label id="ppc" class="ppc" /></div>
+                <div class="col-md-12">£<label id="ppc" class="pricePerCup" /></div>
             </div>
             <div class="spacer">SASS/LESS WILL BE USED TO CREATE THE SPACE</div>
             <div class="rows">
