--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>LCB Algorithm</title>
     <meta name="description" content="LCB Product algorithm">
     <meta name="author" content="LCB">
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet" type-"text/css">
 </head>
  <body>
      <header>
@@ -30,7 +30,7 @@
                 </div>
         </form>
      </div>
-
+<div><p>This is some crazy text</p></div>
     <footer>
          <nav class="navbar navbar-default navbar-fixed-bottom">
             <div class="container">
@@ -41,5 +41,6 @@
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
  </body>
 </html>
